src/main/java/com/example/bj_isfp_backend/global/error/exception/ErrorResponse.java
package com.example.bj_isfp_backend.global.error.exception;

import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;

@Getter
@AllArgsConstructor(access = AccessLevel.PRIVATE)
@Builder
public class ErrorResponse {
    private final int status;
    private final String code;
    private final String message;
}
